--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -19,8 +19,8 @@
         </div>
         <div class="col-md-3">
             <div>
-                <img src="./assets/images/main-slider-side-1.jpg" class="w-100 rounded-1"  height="200" alt="">
-                <img src="./assets/images/main-slider-side-2.jpg"  class="w-100 rounded-1" height="200" alt="">
+                <img src="./assets/images/slide-1.jpeg" class="w-100 rounded-1"  height="200" alt="">
+                <img src="./assets/images/slide-2.jpeg"  class="w-100 rounded-1" height="200" alt="">
 
             </div>
         </div>
